# sema

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GUIDELINES.md  INTENT.md  README.md  flake.nix  manifest  readme.md  rust-toolchain.toml  sema-lang-field-seed.cozo  sema-lang-field-type-seed.cozo  sema-lang-init.cozo  sema-lang-seed.cozo  skills.md
.beads/: config.yaml  metadata.json
reference/: Vision.md
schema/: sema.concept.schema
scripts/: test-doc  test-kernel-surface  test-legacy-slot-store  test-no-legacy-surface
src/: lib.rs
tests/: kernel.rs  no_legacy_surface.rs  sema.rs
v015_reference/: kernel.sema
